--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://seogorillasca.github.io/WordPress-Web-Development-Trends-in-2021/">https://seogorillasca.github.io/WordPress-Web-Development-Trends-in-2021/</a><br>
+                <a target="_bLank" href="https://seogorillas.s3.us-east-005.backblazeb2.com/WordPress+Web+Development+Trends+in+2021/index.html">https://seogorillas.s3.us-east-005.backblazeb2.com/WordPress+Web+Development+Trends+in+2021/index.html</a><br>
+                <a target="_bLank" href="https://word-press-web-development-t-git-0d9f94-seogorillascas-projects.vercel.app/">https://word-press-web-development-t-git-0d9f94-seogorillascas-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://merry-sprinkles-0b1f06.netlify.app">https://merry-sprinkles-0b1f06.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
